tests/comp/sem/invalid/minus_boolean.mj
class A {

	public void test(boolean foo) {
		/*** - ***/ foo;
	}

	public static void main(String[] args) {
	}

}
